methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:4: error: not found: value YELLOW
      faireV(YELLOW)
             ^MethodsPicture:5: error: not found: value RED
      faireV(RED)
             ^MethodsPicture:6: error: not found: value BLUE
      faireV(BLUE)
             ^MethodsPicture:7: error: not found: value GREEN
      faireV(GREEN)
             ^